--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <h1>This the Headliner!</h>
+        <h1>This the Headliner!</h1>
         
         Hello there, awesome person!
     </body>
