--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <body>
         <h1>This the Headliner!</h1>
-        
+<img src="https://avatars0.githubusercontent.com/u/69312921?v=4">
+
         Hello there, awesome person!
     </body>
     
