--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         Hello there, awesome person!
         
         <ul>
-            <li>The Verge</li>
-            <li>Youtube</li>
-            <li>LinkedIn</li>
-            <li>Engadget</li>
+            <li><a href="https://www.theverge.com/">The Verge</a></li>
+            <li><a href="https://www.youtube.com/">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/home">LinkedIn</a></li>
+            <li><a href="https://www.engadget.com/">Engadget</a></li>
         </ul>
         
     </body>
